# Tetris

./: .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  Toolchain-macos.cmake  Toolchain-mingw32.cmake  data.h  deploy-linux.sh  deploy-win.sh  index.html  params.json  tetris.c  tetris.h  tetris_sdl.c
docs/: cc-linux.md  cc-osx.md  cc-osx.md.md  cc-windows.md
include/: config.h  data.h  device.h  tetris.h
src/: tetris.c
